--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
 }
 
 #gradient {
+    transform: translate(0, -10px);
     height: 100px;
     background-image: linear-gradient(180deg, black, rgb(28, 30, 33, 0));
 }
