--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,25 @@ body {
  background-color: rgb(28, 30, 33);
  font-family: 'Lucida Grande', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  color: white;
+ text-align: center;
 }  
 
 h1 {
     text-align: center;
 }
+
+p {
+    text-align: center;
+}
+
 .header-Image {
     width:100%; 
     object-fit:contain; 
     
+}
+
+li {
+    text-align: center;
 }
 
 .header-parallax {
@@ -22,8 +32,34 @@ h1 {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.div-list {
+    margin: auto;
+    width: 50%;
+}
+
 #gradient {
     transform: translate(0, -10px);
     height: 100px;
     background-image: linear-gradient(180deg, black, rgb(28, 30, 33, 0));
+}
+
+.rivers-image {
+  width:fit-content 
+}
+
+.column {
+    float: left;
+    width: 50%;
+  }
+  
+  /* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+.social-image {
+    width: 30%;
 }
