--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,15 @@ h1 {
     text-align: center;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1170px) {
     h1 {
         font-size: 100px;
+    }
+    h2 {
+        font-size: 75px;
+    }
+    p {
+        font-size: 50px;
     }
 }
 p {
