--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ h1 {
     text-align: center;
 }
 
-@media (max-width: 1170px) {
+@media screen and (orientation: portrait) {
     h1 {
         font-size: 100px;
     }
@@ -19,6 +19,9 @@ h1 {
         font-size: 75px;
     }
     p {
+        font-size: 50px;
+    }
+    li {
         font-size: 50px;
     }
 }
@@ -33,7 +36,7 @@ p {
 }
 
 li {
-    text-align: center;
+    align-items: center;
 }
 
 /* .header-parallax {
