--- a/styles.css
+++ b/styles.css
@@ -9,26 +9,17 @@ body {
 
 h1 {
     text-align: center;
+    font-size: 48px;
 }
 
-@media screen and (orientation: portrait) {
-    h1 {
-        font-size: 100px;
-    }
-    h2 {
-        font-size: 75px;
-    }
-    p {
-        font-size: 50px;
-    }
-    li {
-        font-size: 50px;
-    }
-}
 p {
     text-align: center;
+    font-size: 18px;
 }
 
+h2 {
+    font-size: 28px;
+}
 .header-Image {
     width:100%; 
     object-fit:contain; 
@@ -37,6 +28,8 @@ p {
 
 li {
     align-items: center;
+    font-size: 18px;
+    text-align: left;
 }
 
 /* .header-parallax {
@@ -76,3 +69,164 @@ li {
 .social-image {
     width: 50%;
 }
+
+@media all and (min-width:960px) and (max-width: 1024px) {
+    h1 {
+        font-size: 100px;
+    }
+    h2 {
+        font-size: 75px;
+    }
+    p {
+        font-size: 50px;
+    }
+    li {
+        font-size: 50px;
+    }
+
+    .social-image {
+        width: 75%;
+    }
+
+    .rivers-image {
+        width: 75%;
+    }
+  }
+  
+  @media all and (min-width:801px) and (max-width: 959px) {
+    h1 {
+        font-size: 100px;
+    }
+    h2 {
+        font-size: 75px;
+    }
+    p {
+        font-size: 50px;
+    }
+    li {
+        font-size: 50px;
+    }
+
+    .social-image {
+        width: 75%;
+    }
+
+    .rivers-image {
+        width: 75%;
+    }
+  }
+  
+  @media all and (min-width:769px) and (max-width: 800px) {
+    h1 {
+        font-size: 100px;
+    }
+    h2 {
+        font-size: 75px;
+    }
+    p {
+        font-size: 50px;
+    }
+    li {
+        font-size: 50px;
+    }
+
+    .social-image {
+        width: 75%;
+    }
+
+    .rivers-image {
+        width: 75%;
+    }
+  }
+  
+  @media all and (min-width:569px) and (max-width: 768px) {
+    h1 {
+        font-size: 100px;
+    }
+    h2 {
+        font-size: 75px;
+    }
+    p {
+        font-size: 50px;
+    }
+    li {
+        font-size: 50px;
+    }
+
+    .social-image {
+        width: 75%;
+    }
+
+    .rivers-image {
+        width: 75%;
+    }
+  }
+  
+  @media all and (min-width:481px) and (max-width: 568px) {
+    h1 {
+        font-size: 100px;
+    }
+    h2 {
+        font-size: 75px;
+    }
+    p {
+        font-size: 50px;
+    }
+    li {
+        font-size: 50px;
+    }
+
+    .social-image {
+        width: 75%;
+    }
+
+    .rivers-image {
+        width: 75%;
+    }
+  }
+  
+  @media all and (min-width:321px) and (max-width: 480px) {
+    h1 {
+        font-size: 100px;
+    }
+    h2 {
+        font-size: 75px;
+    }
+    p {
+        font-size: 50px;
+    }
+    li {
+        font-size: 50px;
+    }
+
+    .social-image {
+        width: 75%;
+    }
+
+    .rivers-image {
+        width: 75%;
+    }
+  }
+  
+  @media all and (min-width:0px) and (max-width: 320px) {
+    h1 {
+        font-size: 100px;
+    }
+    h2 {
+        font-size: 75px;
+    }
+    p {
+        font-size: 50px;
+    }
+    li {
+        font-size: 50px;
+    }
+
+    .social-image {
+        width: 75%;
+    }
+
+    .rivers-image {
+        width: 75%;
+    }
+  }
