--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,9 @@ h2 {
     font-size: 28px;
 }
 .header-Image {
-    width:100%; 
-    object-fit:contain; 
+    width: 100%; 
+    object-fit:cover; 
+    object-position: 75%, 25%;
     
 }
 
@@ -230,3 +231,15 @@ li {
         width: 75%;
     }
   }
+
+.crop {
+    width: 200px;
+    height: 150px;
+    overflow: hidden;
+}
+
+.crop img {
+    width: 400px;
+    height: 300px;
+    margin: -75px 0 0 -100px;
+}
