--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,17 @@ p {
 h2 {
     font-size: 28px;
 }
-.header-Image {
-    width: 100%; 
-    object-fit:cover; 
-    object-position: 75%, 25%;
-    
+.header.img {
+    width:100%;
+    vertical-align:middle;
+    object-fit: contain;
 }
 
+.header {
+    width:100%; 
+    height:450px;
+    background-color: #000000;
+}
 li {
     align-items: center;
     font-size: 18px;
@@ -91,6 +95,18 @@ li {
 
     .rivers-image {
         width: 75%;
+    }
+    
+    .header.img {
+        width:100%;
+        vertical-align:middle;
+        object-fit:contain;
+    }
+    
+    .header {
+        width:100%; 
+        height:300px;
+        background-color: #000000;
     }
   }
   
