--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,96 @@ button:hover {
     padding: 50px;
 }
 
+* {box-sizing:border-box}
+
+.slideshow-container {
+    padding-top: 1%;
+    max-width: 62vh;
+    position: relative;
+    margin: auto;
+}
+
+.slideshow-image {
+    border: 4px outset #ffffff;
+    border-radius: 15px;
+    width: 100%;
+}
+.mySlides {
+    display: none;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position:absolute;
+    top:50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius:  0 3px 3px 0;
+    user-select: none;
+}
+
+.next {
+    right: 0;
+    border-radius: 15px 0 0 15px;
+}
+
+.prev {
+    left: 0;
+    border-radius: 0 15px 15px 0;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
+.text {
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+.numbertext {
+    color: seashell;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: o;
+}
+
+.dot {
+    cursor:pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+background-color: #717171;
+}
+
+.fade {
+animation-name: fade;
+animation-duration: 1.5s;
+}
+
+@keyframes fade {
+from {opacity: .4}
+to {opacity: 1}
+}
+
 @media all and (min-width:960px) and (max-width: 1024px) {
     h1 {
         font-size: 100px;
