--- a/css/styles.css
+++ b/css/styles.css
@@ -42,9 +42,9 @@ body {
   }
 
   #grid img {
-    width:30vw;
+    width:400px;
     max-width: 400px;
-    min-width: 200px;
+    min-width: 400px;
     border: 4px outset seashell;
     border-radius: 15px;
     box-shadow: 10px 5px 5px #000000 ;
@@ -108,7 +108,7 @@ body {
   
   /* Social Image Styles */
   .social-image {
-    width: 50%;
+    width: 25%;
   }
   
   /* Button Styles */
@@ -262,6 +262,27 @@ body {
       width: 100%;
       height: 300px;
       background-color: #000000;
+    }
+    .prev,
+    .next {
+      cursor: pointer;
+      position: absolute;
+      top: 25%;
+      width: 10%;
+      margin-top: -22px;
+      padding: 16px;
+      color: white;
+      font-weight: bold;
+      font-size: 18px;
+      transition: 0.6s ease;
+      border-radius: 0 3px 3px 0;
+      user-select: none;
+      height: 50%;
+    }
+
+    .prev a, 
+    .next a {
+      vertical-align: 50%;
     }
   }
   
